syntax = "proto3";

package product;

option go_package = "github.com/f0rmul/payment-service/pkg/payment-service;payment_service";

message Product {
    string id = 1;
    string name =2;
}
message CreateProductRequest {
    string name = 1;
}
message CreateProductResponse{
    string id = 1;
}

message ProductByIDRequest{
    string id = 1;
}
message ProductByIDResponse{
    Product product =1;
}


service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
    rpc GetProductByID(ProductByIDRequest) returns (ProductByIDResponse)    {}
}